@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project>
-	<artifactId>com.kms.katalon.console.parent</artifactId>
-	<packaging>pom</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.kms</groupId>
+	<artifactId>com.kms.katalon.console.parent</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
 	<parent>
 		<groupId>com.kms</groupId>
@@ -10,64 +14,54 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
   
+	<name>Katalon Agent</name>
+	
+	<prerequisites>
+		<maven>3.0</maven>
+	</prerequisites>
+	
 	<modules>
-		<module>../com.kms.katalon.target</module>
-		<module>../com.kms.katalon.constant</module>		
-		<module>../com.kms.katalon.entity</module>
-		<module>../ com.kms.katalon.preferences</module>
-		<module>../com.kms.katalon.engine</module>
-		<module>../com.kms.katalon.groovy</module>
-		<module>../com.kms.katalon.core</module>
-		<module>../com.kms.katalon.custom</module>
-		<module>../com.kms.katalon.dal</module>
-		<module>../com.kms.katalon.dal.file</module>
-		<module>../com.kms.katalon.integration.qtest</module>
-		<module>../com.kms.katalon.controller</module>
-		<module>../com.kms.katalon.execution</module>
 		<module>../com.kms.katalon.console.feature</module>
 		<module>../com.kms.katalon.console</module>
 		<module>../com.kms.katalon.console.product</module>
+		<module>../com.kms.katalon.constant</module>
+		<module>../com.kms.katalon.controller</module>
+		<module>../com.kms.katalon.core.appium</module>
+		<module>../com.kms.katalon.core.mobile</module>
+		<module>../com.kms.katalon.core.webservice</module>
+		<module>../com.kms.katalon.core.webui</module>
+		<module>../com.kms.katalon.core</module>
+		<module>../com.kms.katalon.custom</module>
+		<module>../com.kms.katalon.dal.file</module>
+		<module>../com.kms.katalon.dal</module>
+		<module>../com.kms.katalon.entity</module>
+		<module>../com.kms.katalon.execution.mobile</module>
+		<module>../com.kms.katalon.execution.webui</module>
+		<module>../com.kms.katalon.execution</module>
+		<module>../com.kms.katalon.groovy</module>
+		<module>../com.kms.katalon.integration.qtest</module>
+		<module>../com.kms.katalon.integration.kobiton</module>
+		<module>../com.kms.katalon.integration.jira</module>
+		<module>../com.kms.katalon.jasper</module>
+		<module>../com.kms.katalon.logging</module>
+		<module>../com.kms.katalon.preferences</module>
+		<module>../com.kms.katalon.selenium-standalone</module>
+		<module>../com.kms.katalon.jbrowser</module>
+		<module>../com.kms.katalon.target</module>
+		<module>../com.kms.katalon.support.testing.katserver</module>
 	</modules>
-	
-
-	<properties>
-		<tycho.version>0.19.0</tycho.version>
-		<eclipse_repo_url>http://download.eclipse.org/eclipse/updates/4.5milestones/</eclipse_repo_url>
-		<eclipse_orbit_repo_url>http://download.eclipse.org/tools/orbit/downloads/drops/R20140525021250/repository/</eclipse_orbit_repo_url>
-		<groovy_repo_url>http://dist.springsource.org/snapshot/GRECLIPSE/e4.4/</groovy_repo_url>
-	</properties>
-
-	<dependencies>
-  <dependency>
-    <groupId>org.codehaus.groovy</groupId>
-    <artifactId>groovy-all</artifactId>
-    <version>2.1.8</version>
-  </dependency>
-</dependencies>
-  
-	<repositories>
-		<repository>
-			<id>eclipse_repo</id>
-			<url>${eclipse_repo_url}</url>
-			<layout>p2</layout>
-		</repository>
-		
-		<repository>
-			<id>eclipse_orbit_repo</id>
-			<url>${eclipse_orbit_repo_url}</url>
-			<layout>p2</layout>
-		</repository>
-		
-		<repository>
-			<id>groovy_repo</id>
-			<url>${groovy_repo_url}</url>
-			<layout>p2</layout>
-		</repository>
-
-	</repositories>
 
 	<build>
-		<plugins>
+		<pluginManagement>
+		  <plugins>
+			<plugin>
+			  <groupId>org.codehaus.gmavenplus</groupId>
+			  <artifactId>gmavenplus-plugin</artifactId>
+			  <version>${gmavenplus.version}</version>
+			</plugin>
+		  </plugins>
+		</pluginManagement>
+		<plugins>			
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
@@ -80,12 +74,13 @@
 				<artifactId>tycho-compiler-plugin</artifactId>
 				<version>${tycho.version}</version>
 				<configuration>
+					<maxmem>2048m</maxmem>
 					<excludeResources>
 						<excludeResource>**/*.groovy</excludeResource>
 					</excludeResources>
-				</configuration>
+				</configuration>				
 			</plugin>
-
+			
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>target-platform-configuration</artifactId>
@@ -100,16 +95,6 @@
 					</target>
 					<environments>
 						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
-							<arch>x86</arch>
-						</environment>
-						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
-							<arch>x86_64</arch>
-						</environment>
-						<environment>
 							<os>win32</os>
 							<ws>win32</ws>
 							<arch>x86</arch>
@@ -118,11 +103,6 @@
 							<os>win32</os>
 							<ws>win32</ws>
 							<arch>x86_64</arch>
-						</environment>
-						<environment>
-							<os>macosx</os>
-							<ws>cocoa</ws>
-							<arch>x86</arch>
 						</environment>
 						<environment>
 							<os>macosx</os>
@@ -135,7 +115,7 @@
 			
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>${maven-compiler.version}</version>
 				<configuration>
 				  <compilerId>groovy-eclipse-compiler</compilerId>
 				</configuration>
@@ -143,12 +123,12 @@
 				  <dependency>
 					<groupId>org.codehaus.groovy</groupId>
 					<artifactId>groovy-eclipse-compiler</artifactId>
-					<version>2.8.0-01</version>
+					<version>2.9.2-01</version>
 				  </dependency>
 				  <dependency>
 					<groupId>org.codehaus.groovy</groupId>
 					<artifactId>groovy-eclipse-batch</artifactId>
-					<version>2.1.8-01</version>				  
+					<version>2.4.3-01</version>				  
 				  </dependency>
 				</dependencies>
 				<executions>
@@ -158,10 +138,36 @@
 							<goal>testCompile</goal>
 						</goals>
 					</execution>
-				</executions>
+				</executions> 
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler.version}</version>
+					<configuration>
+						<fork>true</fork>
+						<meminitial>128m</meminitial>
+						<maxmem>1024m</maxmem>
+						<compilerArgs>
+						<arg>-XX:MaxPermSize=128m</arg>
+					</compilerArgs>
+				</configuration>
 			</plugin>
 		</plugins>
-
 	</build>
-
+	
+	<!--These dependencies used for generating groovy document -->
+	<dependencies>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.4.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.fusesource.jansi</groupId>
+			<artifactId>jansi</artifactId>
+			<version>1.11</version>
+		</dependency>
+	</dependencies>
 </project> 
